[package]
name = "storage-tools-rs"
version = "0.1.0"
authors = ["tacogips <me@tacogips.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
image = "0.23"
lazy_static = "1.4"
regex = "1.4"
url = "2.2"
backoff = {version="0.3",features = ["futures", "tokio"]}
cloud-storage = "0.8"
futures-util = "0.3"
futures = "0.3"
log = "0.4"
reqwest = "0.11"
bytes = "1.0"
http = "0.2"
flate2 = "1.0"

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt"]
default-features = false

[dev-dependencies]
tokio-test = "0.4.0"
uuid = { version="0.8" ,features =["v4", "serde"] }

